--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,12 @@
     "description": "Scrape 'My Enrolled Courses' on Workday and export a .ics calendar of your classes.",
     "permissions": ["activeTab", "scripting", "downloads"],
     "host_permissions": ["https://www.myworkday.com/*", "https://*.myworkday.com/*"],
+    "icons": {
+        "16": "icons/icon16.png",
+        "32": "icons/icon32.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
+    },
     "action": {
         "default_title": "Export .ics",
         "default_popup": "popup.html"
